@@ -4,6 +4,9 @@
 # License GNU General Public License version 2 or later; see LICENSE.txt, see LICENSE.php
 # Note : All ini files need to be saved as UTF-8 - No BOM
 
+WEBLINKS_SUBMENU_WEBLINKS=Web Links
+WEBLINKS_SUBMENU_CATEGORIES=Categories
+
 WEBLINKS_OPTION_FILTER_CATEGORY=- Filter Category -
 WEBLINKS_OPTION_FILTER_PUBLISHED=- Filter State -
 WEBLINKS_OPTION_FILTER_ACCESS=- Filter Access -
